--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title> Doc Planner</title>
     <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.js"/>
 </head>
 <body>
     <header>
